# YuIM

./: .clang-format  .gitignore  CMakeLists.txt
include/ChatService/: ChatServer.h  Redis.h
include/ChatService/protoFile/: ChatServer.pb.h  ProxyServer.pb.h
include/FriendService/: FriendService.h
include/FriendService/FriendServer/: FriendServer.h
include/FriendService/protoFile/: FriendServer.pb.h
include/GroupService/: GroupService.h
include/GroupService/GroupServer/: GroupServer.h  User.h
include/GroupService/protoFile/: GroupServer.pb.h  GroupService.pb.h
include/LogServer/: LogServer.h  LogSever.pb.h
include/LogServer/auxiliary_process/: LogSend.h  LogSend.pb.h
include/LogServer/protoFile/: LogSend.pb.h
include/OfflineService/: OfflineService.h
include/OfflineService/OfflineServer/: OfflineServer.h
include/OfflineService/protoFile/: OfflineServer.pb.h
include/Proxy/: ProxyServer.h  ProxyService.h
include/Proxy/protoFile/: FriendService.pb.h  OfflineService.pb.h  ProxyServer.pb.h  UserService.pb.h
include/UserService/: UserService.h  ZookeeperMaster.h
include/UserService/UserServer/: UserServer.h  ZookeeperFellow.h
include/UserService/protoFile/: LogServer.pb.h  UserServer.pb.h
proto/FriendService/: FriendServer.proto
proto/GroupService/: GroupServer.proto  GroupService.proto
proto/LogServer/: LogSend.proto  LogServer.proto
proto/LogServer/auxiliary_process/: LogSend.proto
proto/OfflineService/: OfflineServer.proto
proto/Proxy/: ChatServer.proto  FriendService.proto  OfflineService.proto  ProxyServer.proto  UserService.proto
proto/UserService/: UserServer.proto  UserService.proto
src/ChatService/: CMakeLists.txt  ChatServer.cc  run.cc
src/ChatService/protoFile/: CMakeLists.txt  ChatServer.pb.cc
src/FriendService/: CMakeLists.txt  FriendService.cc  run.cc
src/FriendService/FriendServer/: CMakeLists.txt  FriendServer.cc  User.cc  run.cc
src/FriendService/example/: CMakeLists.txt  main.cc
src/FriendService/protoFile/: CMakeLists.txt  FriendServer.pb.cc  FriendService.pb.cc
src/GroupService/: CMakeLists.txt  GroupService.cc  run.cc
src/GroupService/GroupServer/: CMakeLists.txt  GroupServer.cc  User.cc  run.cc
src/GroupService/protoFile/: CMakeLists.txt  GroupServer.pb.cc  GroupService.pb.cc
src/LogServer/: CMakeLists.txt  LogServer.cc  LogServer.pb.cc  LogSever.pb.cc  run.cc
src/LogServer/auxiliary_process/: CMakeLists.txt  LogSend.cc  LogSend.pb.cc  run.cc
src/OfflineService/: CMakeLists.txt  OfflineService.cc  run.cc
src/OfflineService/OfflineServer/: CMakeLists.txt  OfflineServer.cc  run.cc
src/OfflineService/protoFile/: CMakeLists.txt  OfflineServer.pb.cc  OfflineService.pb.cc
src/Proxy/: CMakeLists.txt  ProxyServer.cc  ProxyService.cc  Redis.cc  ZookeeperMaster.cc  main.cc
src/Proxy/protoFile/: CMakeLists.txt  ProxyServer.pb.cc  UserService.pb.cc
src/UserService/: CMakeLists.txt  UserService.cc  run.cc
src/UserService/UserServer/: CMakeLists.txt  ZookeeperFellow.cc  run.cc
src/UserService/UserService_Stub/: CMakeLists.txt  UserServer.cc
src/UserService/example/: CMakeLists.txt  main.cc
src/UserService/protoFile/: CMakeLists.txt  UserServer.pb.cc  UserService.pb.cc
